@@ -17,6 +17,9 @@
  - Fixed crash on long output lines for /exec -o [731187].
  - Make "Move completed files to:" and "Save nickname in filenames"
    work at the same time (Matthew Gabeler-Lee).
+ - xtext: fix redraw when new additions not on current page.
+ - win32: Added /set identd 0 switch to turn off built-in identd. 
+ - 
  - 
  - 
 
